buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath 'org.ow2.asm:asm:9.6'
    }
}

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'

    id 'dev.architectury.loom' version '1.13-SNAPSHOT'
    id 'architectury-plugin' version '3.4-SNAPSHOT'
    id 'com.gradleup.shadow' version '8.3.6'
}

architectury {
    minecraft = project.minecraft_version
    // 告诉 Architectury 当前是在做 Fabric 版本
    fabric()
}

base {
    archivesName = mod_id
}
version = mod_version
group = maven_group

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
    options.compilerArgs += "--add-modules"
    options.compilerArgs += "jdk.incubator.vector"
}

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = 'ParchmentMC'
        url = 'https://maven.parchmentmc.org'
    }
    maven {
        name = 'Fabric Maven'
        url = 'https://maven.fabricmc.net'
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    def joclVersion = "2.0.5"
    mappings loom.layered() {
        officialMojangMappings()
        parchment("org.parchmentmc.data:parchment-${parchment_minecraft_version}:${parchment_mappings_version}@zip")
    }

    // 引入 Fabric 加载器
    modImplementation "net.fabricmc:fabric-loader:${fabric_loader_version}"

//    implementation "org.jocl:jocl:${joclVersion}"
//    additionalRuntimeClasspath "org.jocl:jocl:${joclVersion}"

//    jarJar 'org.jocl:jocl:2.0.5'
//    jarJar(group: 'org.jocl', name: 'jocl', version: "[${joclVersion},)")
//    include "org.jocl:jocl:${joclVersion}"

}

loom {
    runs {
        client {
            vmArgs '--enable-preview'
        }
        server {
            vmArgs '--enable-preview'
        }
    }
}


processResources {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            fabric_loader_version  : fabric_loader_version,
            mod_id                 : mod_id,
            mod_version            : mod_version
    ]
    inputs.properties replaceProperties
    filesMatching('fabric.mod.json') { expand replaceProperties }
}

import org.objectweb.asm.*
import java.util.jar.*

void removePreview(File jarFile) {
    println "正在移除预览版标记: ${jarFile}..."
    File tempFile = new File(jarFile.parent, jarFile.name + ".temp")

    try (JarFile jar = new JarFile(jarFile);
         JarOutputStream jos = new JarOutputStream(new FileOutputStream(tempFile))) {

        Enumeration<JarEntry> entries = jar.entries()
        while (entries.hasMoreElements()) {
            JarEntry entry = entries.nextElement()
            InputStream is = jar.getInputStream(entry)

            if (!entry.getName().endsWith(".class")) {
                jos.putNextEntry(new JarEntry(entry.getName()))
                is.transferTo(jos)
                continue
            }

            ClassReader cr = new ClassReader(is)
            ClassWriter cw = new ClassWriter(0)
            ClassVisitor cv = new ClassVisitor(Opcodes.ASM9, cw) {
                @Override
                void visit(int version, int access, String name, String signature, String superName, String[] interfaces) {
                    int newVersion = version & ~Opcodes.V_PREVIEW
                    super.visit(newVersion, access, name, signature, superName, interfaces)
                }
            }

            cr.accept(cv, 0)
            jos.putNextEntry(new JarEntry(entry.getName()))
            jos.write(cw.toByteArray())
        }
    }

    if (jarFile.delete()) {
        if (!tempFile.renameTo(jarFile)) {
            throw new RuntimeException("无法重命名临时文件！")
        }
        println "预览版标记移除成功！"
    } else {
        throw new RuntimeException("无法删除原始 Jar 文件！")
    }
}

tasks.named('remapJar') {
    doLast {
        removePreview archiveFile.get().asFile
    }
}

java {
    withSourcesJar()
}